--- a/contact.html
+++ b/contact.html
@@ -60,14 +60,14 @@
             	<div class="top-right clearfix">
                 	<ul class="info clearfix" style="margin-bottom: 0rem;">
                         <li><a href="#" style="color: #fff; font-size: 14px;"><span  class="fa fa-envelope"></span> info@Omegasoftve.com</a></li>
-                    	<li><a href="#" style="color: #fff; font-size: 14px;"><span style="width: 17px;" class="fa fa-phone"></span>(58) 244 386 8448</a></li>                                  
+                    	<li><a href="#" style="color: #fff; font-size: 14px;"><span  class="fa fa-phone"></span>(58) 244 386 8448</a></li>                                  
                         <div class="top-right clearfix">
                             <div class="options-box clearfix">
                                 <div class="lang-box">
                                     <div class="dropdown">
-                                        <button style="color: #fff; margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
+                                        <button style="color: #fff; margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img style="height: 15px;width:15px;margin-right:5px;margin-top: -5px;" src="images/icons/imgpsh_fullsize.png" alt="">Español</button>
                                         <ul class="dropdown-menu search-panel" aria-labelledby="dropdownMenu2">
-                                            <li><a href="construccion.html">English</a></li>
+                                            <li><a style="font-size: 15px;" href="construccion.html">English</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -103,7 +103,7 @@
                             
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li class="current dropdown"><a href="#">Soluciones</a>
+                                    <li class=""><a href="#">Soluciones</a>
                                         <ul>
                                             <li><a href="index-3.html">OmegaITSM</a></li>
                                             <!--<li><a href="index-3.html">Home 02</a></li>
@@ -190,7 +190,7 @@
                         
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation clearfix">
-                                <li class="current dropdown"><a href="#">Soluciones</a>
+                                <li class=""><a href="#">Soluciones</a>
                                     <ul>
                                         <li><a href="index-3.html">OmegaITSM</a></li>
                                        <!-- <li><a href="index-3.html">Home 02</a></li>
@@ -408,7 +408,7 @@
                                                 <div class="input-group mb-3">
                                                     <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="button-addon2">
                                                     <div class="input-group-append">
-                                                        <button style="background: green; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
+                                                        <button style="background:#2387e4; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
                                                     </div>
                                                 </div>
                                             </div>
