--- a/index-3.html
+++ b/index-3.html
@@ -55,9 +55,9 @@
                             <div class="options-box clearfix">
                                 <div class="lang-box">
                                     <div class="dropdown">
-                                        <button style="color: #fff;margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
+                                        <button style="color: #fff;margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img style="height: 15px;width:15px;margin-right:5px;margin-top: -5px;" src="images/icons/imgpsh_fullsize.png" alt="">Español<span class=""></span></button>
                                         <ul class="dropdown-menu search-panel" aria-labelledby="dropdownMenu2">
-                                            <li><a href="construccion.html">English</a></li>
+                                            <li><a style="font-size: 15px;" href="construccion.html">English</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                             
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li class="current dropdown"><a href="#">Soluciones</a>
+                                    <li class=""><a href="#">Soluciones</a>
                                         <ul>
                                             <li><a href="index-3.html">OmegaITSM</a></li>
                                             <!--<li><a href="index-3.html">Home 02</a></li>
@@ -180,7 +180,7 @@
                         
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation clearfix">
-                                <li class="current dropdown"><a href="#">Soluciones</a>
+                                <li class=""><a href="#">Soluciones</a>
                                     <ul>
                                         <li><a href="index-3.html">OmegaITSM</a></li>
                                        <!-- <li><a href="index-3.html">Home 02</a></li>
@@ -1163,7 +1163,7 @@
                                                 <div class="input-group mb-3">
                                                     <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="button-addon2">
                                                     <div class="input-group-append">
-                                                        <button style="background: green; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
+                                                        <button style="background:#2387e4; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
                                                     </div>
                                                 </div>
                                             </div>
