--- a/nuestrosClientes.html
+++ b/nuestrosClientes.html
@@ -77,9 +77,9 @@
                             <div class="options-box clearfix">
                                 <div class="lang-box">
                                     <div class="dropdown">
-                                        <button style="color: #fff; margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Español<span class=""></span></button>
+                                        <button style="color: #fff; margin-top: 3px;" class="lang-btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img style="height: 15px;width:15px;margin-right:5px;margin-top: -5px;" src="images/icons/imgpsh_fullsize.png" alt="">Español<span class=""></span></button>
                                         <ul class="dropdown-menu search-panel" aria-labelledby="dropdownMenu2">
-                                            <li><a href="construccion.html">English</a></li>
+                                            <li><a style="font-size: 15px;" href="construccion.html">English</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -115,7 +115,7 @@
                             
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li class="current dropdown"><a href="#">Soluciones</a>
+                                    <li class=""><a href="#">Soluciones</a>
                                         <ul>
                                             <li><a href="index-3.html">OmegaITSM</a></li>
                                             <!--<li><a href="index-3.html">Home 02</a></li>
@@ -202,7 +202,7 @@
                         
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation clearfix">
-                                <li class="current dropdown"><a href="#">Soluciones</a>
+                                <li class="mynav"><a href="#">Soluciones</a>
                                     <ul>
                                         <li><a href="index-3.html">OmegaITSM</a></li>
                                        <!-- <li><a href="index-3.html">Home 02</a></li>
@@ -289,8 +289,8 @@
         </div>
     </section>
 
-    <section class="page-title" style="height: 530px; background: #e8e8e8;">
-            <div class="image-layer" style="background-image:url(images/background/imgpsh_fullsize-8-1.png); opacity: 10.0;"></div>
+    <section class="page-title" style="height: 530px;background: #5aceff5c;">
+            <div class="image-layer" style="background-image:url(images/background/clientes-nuevo.png); opacity: 10.0;"></div>
             <div class="auto-container">
             </div>
         </section>
@@ -304,66 +304,69 @@
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
+                                <div style="text-align: justify;" class="text">Omega ITSM nos ha ayudado totalmente
+                                    a mejorar nuestra gestión de servicios. La gerencia
+                                    de Tecnología ahora es mucho más eficiente, mejorando
+                                    nuestros Tiempos de respuesta teniendo un unico punto de
+                                    contacto con los distintos departamentos de la gerencia. 
+                                </div>
                                 <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-2.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">CEO, LLP Group</div>
+                                    <figure class="image img-circle"><img class="img-circle" src="images/clients/cliente1.png" alt=""></figure>
+                                    <h4>Arnoldo Rodriguez</h4>
+                                    <div class="designation">Gerente de Tecnología, Grupos de Ultimas Noticias.</div>
                                 </div>
                             </div>
                         </div>
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
+                                <div style="text-align: justify;" class="text">Con las soluciones de Omegasoft, hemos podido
+                                    gestiona de manera eficiente las necesidades
+                                    de nuestros usuarios, ha permitido mayor 
+                                    contro en el tiempo de atención loque ha sido 
+                                    una oportunidad para el mejoramiento continuo
+                                    de nuestros procesos, en particular se ha
+                                    mejorando notablemente la comunicación entre
+                                    los usuarios y nuestros departamnto, los
+                                    cuales ahora conocen en todo momento el 
+                                    estado en el que se encuentra su solucitud.</div>
                                 <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-3.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">Manager of EOF Group</div>
+                                    <figure class="image img-circle"><img class="img-circle" src="images/clients/cliente2.png" alt=""></figure>
+                                    <h4>Jesús Reyes</h4>
+                                    <div class="designation">Gerente de Tecnología, Technip Velam</div>
                                 </div>
                             </div>
                         </div>
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
+                                <div style="text-align: justify;" class="text">Con Omega ITSM tenemos gestión
+                                    controlada y alineada aTIL, una comunicacion
+                                    efectiva con los usuarios, una distribución
+                                    más eficiente de las cargas de trabajo, un
+                                    seguimiento continuo mediante reportes e
+                                    informes y una medición de niveles de 
+                                    servicios para mejora del servicios.</div>
                                 <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-2.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">CEO, LLP Group</div>
+                                    <figure class="image img-circle"><img class="img-circle" src="images/clients/cliente3.png" alt=""></figure>
+                                    <h4>José Flores</h4>
+                                    <div class="designation">Gerente de Tecnología, Ron Santa Teresa</div>
                                 </div>
                             </div>
                         </div>
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
+                                <div style="text-align: justify;" class="text">Omegasoft nosha permitido la
+                                    implementacion de una solución intergra
+                                    par la gestión de los servicios TI, alineando
+                                    los procesos del área con las buenas prácticas
+                                    que ofrece ITIL lo cual hoy nos facilita
+                                    el brindar servicios de mayor calidad.</div>
                                 <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-3.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">Manager of EOF Group</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Slide Item-->
-                        <div class="testimonial-block">
-                            <div class="inner">
-                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
-                                <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-2.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">CEO, LLP Group</div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Slide Item-->
-                        <div class="testimonial-block">
-                            <div class="inner">
-                                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida erat quis libero iaculis, quis hendrerit enim dignissim. Pellentesque pharetra euismod metus, nec efficitur risus.</div>
-                                <div class="info">
-                                    <figure class="image img-circle"><img class="img-circle" src="images/resource/author-3.jpg" alt=""></figure>
-                                    <h4>Jk. Shaif Ali</h4>
-                                    <div class="designation">Manager of EOF Group</div>
+                                    <figure class="image img-circle"><img class="img-circle" src="images/clients/cliente4.png" alt=""></figure>
+                                    <h4>Juan Carlos Duque</h4>
+                                    <div class="designation">Gerente de Tecnología,Mapre la Seuridad</div>
                                 </div>
                             </div>
                         </div>
@@ -468,7 +471,7 @@
                                                 <div class="input-group mb-3">
                                                     <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="button-addon2">
                                                     <div class="input-group-append">
-                                                        <button style="background: green; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
+                                                        <button style="background: #2387e4; color: white; font-size: 15px;" class="btn btn-outline-secondary" type="button" id="button-addon2">Enviar</button>
                                                     </div>
                                                 </div>
                                             </div>
