--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -127,7 +127,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Soporte</a>
+                                    <li class="dropdown"><a href="soporte.html">Soporte</a>
                                         <!--<ul>
                                             <li><a href="about.html">About us</a></li>
                                             <li><a href="careers.html">Careers</a></li>
@@ -214,7 +214,7 @@
                                         </li> -->
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#">Soporte</a>
+                                <li class="dropdown"><a href="soporte.html">Soporte</a>
                                 	<!--<ul>
                                     	<li><a href="about.html">About us</a></li>
                                         <li><a href="careers.html">Careers</a></li>
