--- a/nuestrosClientes.html
+++ b/nuestrosClientes.html
@@ -127,7 +127,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Soporte</a>
+                                    <li class="dropdown"><a href="soporte.html">Soporte</a>
                                         <!--<ul>
                                             <li><a href="about.html">About us</a></li>
                                             <li><a href="careers.html">Careers</a></li>
@@ -214,7 +214,7 @@
                                         </li> -->
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#">Soporte</a>
+                                <li class="dropdown"><a href="soporte.html">Soporte</a>
                                 	<!--<ul>
                                     	<li><a href="about.html">About us</a></li>
                                         <li><a href="careers.html">Careers</a></li>
@@ -293,7 +293,7 @@
             <div class="image-layer" style="background-image:url(images/background/clientes-nuevo.png); opacity: 10.0;"></div>
             <div class="auto-container">
             </div>
-        </section>
+    </section>
 
         <!--Testimonials Two Section-->
     <section class="testimonials-two">
@@ -304,7 +304,8 @@
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div style="text-align: justify;" class="text">Omega ITSM nos ha ayudado totalmente
+                                <div style="text-align: justify;" class="text">
+                                    Omega ITSM nos ha ayudado totalmente
                                     a mejorar nuestra gestión de servicios. La gerencia
                                     de Tecnología ahora es mucho más eficiente, mejorando
                                     nuestros Tiempos de respuesta teniendo un unico punto de
@@ -320,7 +321,8 @@
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div style="text-align: justify;" class="text">Con las soluciones de Omegasoft, hemos podido
+                                <div style="text-align: justify;" class="text">
+                                    Con las soluciones de Omegasoft, hemos podido
                                     gestiona de manera eficiente las necesidades
                                     de nuestros usuarios, ha permitido mayor 
                                     contro en el tiempo de atención loque ha sido 
@@ -340,7 +342,8 @@
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div style="text-align: justify;" class="text">Con Omega ITSM tenemos gestión
+                                <div style="text-align: justify;" class="text">
+                                    Con Omega ITSM tenemos gestión
                                     controlada y alineada aTIL, una comunicacion
                                     efectiva con los usuarios, una distribución
                                     más eficiente de las cargas de trabajo, un
@@ -357,7 +360,8 @@
                         <!--Slide Item-->
                         <div class="testimonial-block">
                             <div class="inner">
-                                <div style="text-align: justify;" class="text">Omegasoft nosha permitido la
+                                <div style="text-align: justify;" class="text">
+                                    Omegasoft nosha permitido la
                                     implementacion de una solución intergra
                                     par la gestión de los servicios TI, alineando
                                     los procesos del área con las buenas prácticas
@@ -511,7 +515,7 @@
         </div>
 
 
-    </footer>
+</footer>
 
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="icon fa fa-angle-double-up"></span></div>
 
