--- a/index-3.html
+++ b/index-3.html
@@ -105,7 +105,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Soporte</a>
+                                    <li class="dropdown"><a href="soporte.html">Soporte</a>
                                         <!--<ul>
                                             <li><a href="about.html">About us</a></li>
                                             <li><a href="careers.html">Careers</a></li>
@@ -192,7 +192,7 @@
                                         </li> -->
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#">Soporte</a>
+                                <li class="dropdown"><a href="soporte.html">Soporte</a>
                                 	<!--<ul>
                                     	<li><a href="about.html">About us</a></li>
                                         <li><a href="careers.html">Careers</a></li>
