--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -379,7 +379,7 @@
                     <!--News Block-->
                     <div class="news-block-two col-md-4 col-sm-6 col-xs-12">
                         <div class="inner-box">
-                            <figure class="image-box"><a href="blog-detail.html"><img src="images/resource/image-13.jpg" alt=""></a></figure>
+                            <figure class="image-box"><a href="blog-detail.html"><img src="images/resource/mision.jpg" alt=""></a></figure>
                             <div class="lower-box">
                                 <div class="sec-title centered">
                                     <h1 style="font-size:25px">Misión</h1>
@@ -395,7 +395,7 @@
                     <!--News Block-->
                     <div class="news-block-two col-md-4 col-sm-6 col-xs-12">
                         <div class="inner-box">
-                            <figure class="image-box"><a href="blog-detail.html"><img src="images/resource/image-14.jpg" alt=""></a></figure>
+                            <figure class="image-box"><a href="blog-detail.html"><img src="images/resource/vision.jpg" alt=""></a></figure>
                             <div class="lower-box">
                                 <div class="sec-title centered">
                                     <h1 style="font-size:25px">Visión</h1>
@@ -411,7 +411,7 @@
                     <!--News Block-->
                     <div class="news-block-two col-md-4 col-sm-6 col-xs-12">
                         <div class="inner-box">
-                            <figure class="image-box"><a href="blog-detail.html"><img src="images/resource/image-15.jpg" alt=""></a></figure>
+                            <figure class="image-box"><a href="blog-detail.html"><img src="images/resource/valores.jpg" alt=""></a></figure>
                             <div class="lower-box">
                                 <div class="sec-title centered">
                                     <h1 style="font-size:25px">Valores</h1>
