--- a/soporte.html
+++ b/soporte.html
@@ -127,7 +127,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="soporte.html">Soporte</a>
+                                    <li class="dropdown"><a href="#soporte.html">Soporte</a>
                                         <!--<ul>
                                             <li><a href="about.html">About us</a></li>
                                             <li><a href="careers.html">Careers</a></li>
@@ -215,20 +215,11 @@
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="soporte.html">Soporte</a>
-                                	<!--<ul>
-                                    	<li><a href="about.html">About us</a></li>
-                                        <li><a href="careers.html">Careers</a></li>
-                                        <li><a href="partners.html">Partners</a></li>
-                                    </ul>-->
                                 </li>
                                 <li class="dropdown"><a href="#">Clientes</a>
 									<ul>
 										<li><a href="nuestrosClientes.html">Nuestros Clientes</a></li>
 										<li><a href="financial-planning.html">Casos de Éxito</a></li>
-										<!--<li><a href="savings-investment.html">Savings &amp; Investment</a></li>
-										<li><a href="private-banking.html">Private Banking</a></li>
-										<li><a href="consumer-leasing.html">Consumer Leasing</a></li>
-										<li><a href="strategic-planning.html">Strategic Planning</a></li> -->
 									</ul>
 								</li>
                                 <li class="dropdown"><a href="#">Partner</a>
@@ -264,7 +255,7 @@
     </header>
    
     <section class="page-title" style="height: 530px;">
-    	<div class="image-layer" style="background-image:url(images/background/nuestros-clientes.jpg); opacity: 10.0;"></div>
+    	<div class="image-layer" style="background-image:url(images/background/SOPORTE.jpg); opacity: 10.0;"></div>
         <div class="auto-container">
         </div>
     </section>
