--- a/webcast.html
+++ b/webcast.html
@@ -119,9 +119,9 @@
                                 
                                 <div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
-                                        <li class=""><a href="">Soluciones</a>
+                                        <li class="dropdown"><a href="">Soluciones</a>
                                             <ul>
-                                                <li><a href="index-3.html">OmegaITSM</a></li>
+                                                <li><a href="">OmegaITSM</a></li>
                                             </ul>
                                         </li>
                                         </li>
@@ -191,9 +191,9 @@
                             
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li class=""><a href="">Soluciones</a>
+                                    <li class="dropdown"><a href="">Soluciones</a>
                                         <ul>
-                                            <li><a href="index-3.html">OmegaITSM</a></li>
+                                            <li><a href="">OmegaITSM</a></li>
                                         </ul>
                                     </li>
                                     <li class=""><a href="soporte.html">Soporte</a>
