--- a/nuestroEquipo.html
+++ b/nuestroEquipo.html
@@ -332,13 +332,13 @@
                         <div class="inner">
                             <!--Jobs Widget-->
                             <div class="jobs-widget side-widget">
-                                <h3>Current Opportunities</h3>
+                                <h3>Oportunidades Actuales</h3>
                                 <div class="widget-inner">
                                     <ul>
-                                        <li class="current"><a class="clearfix" href="careers.html"><span class="pull-left">Finance Accountant</span> <span class="pull-right">(03)</span></a></li>
-                                        <li><a class="clearfix" href="careers.html"><span class="pull-left">Finance Banking</span> <span class="pull-right">(12)</span></a></li>
-                                        <li><a class="clearfix" href="careers.html"><span class="pull-left">Consultant Manager</span> <span class="pull-right">(11)</span></a></li>
-                                        <li><a class="clearfix" href="careers.html"><span class="pull-left">IT Consultant</span> <span class="pull-right">(15)</span></a></li>
+                                        <li class="current"><a class="clearfix" href=""><span class="pull-left">tecnología</span> <span class="pull-right"></span></a></li>
+                                        <li><a class="clearfix" href=""><span class="pull-left">Comercial</span> <span class="pull-right"></span></a></li>
+                                        <li><a class="clearfix" href=""><span class="pull-left">Marketing</span> <span class="pull-right"></span></a></li>
+                                        <li><a class="clearfix" href=""><span class="pull-left">Administración</span> <span class="pull-right"></span></a></li>
                                     </ul>
                                 </div>
                             </div>                            
@@ -359,7 +359,7 @@
                                         <li>How all this mistaken idea of denouncing pleasure</li>
                                         <li>Expound the actual teachings of the great explorer of the truth</li>
                                     </ul>
-                                    <div class="link-box"><a href="#" class="theme-btn btn-style-two">Apply</a></div>
+                                    <div class="link-box"><a href="#" class="theme-btn btn-style-two">Postularse</a></div>
                                 </div>
                                 <!--Career Block-->
                                 <div class="career-block">
@@ -369,13 +369,13 @@
                                         <li>I must explain to you how all this mistaken idea</li>
                                         <li>How all this mistaken idea of denouncing pleasure</li>
                                     </ul>
-                                    <div class="link-box"><a href="#" class="theme-btn btn-style-two">Apply</a></div>
+                                    <div class="link-box"><a href="#" class="theme-btn btn-style-two">Postularse</a></div>
                                 </div>
                                 <!--Career Block-->
                                 <div class="career-block">
                                     <h2>Junior Innovation Manager</h2>
                                     <p>Pellentesque luctus justo et convallis mollis. Vivamus vitae quam tempus, mattis mi ac, placerat mauris. Pellentesque porta enim non ultricies sagittis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In sed nunc tortor. Aliquam lobortis viverra leo.</p>
-                                    <div class="link-box"><a href="#" class="theme-btn btn-style-two">Apply</a></div>
+                                    <div class="link-box"><a href="#" class="theme-btn btn-style-two">Postularse</a></div>
                                 </div>
                             </div>
                         </div>
