--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <title>Omegasoft</title>
 
+
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
@@ -49,6 +50,7 @@
 
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
 
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -269,7 +271,7 @@
                         <div class="sec-title centered" style="text-align: initial;">
                             <div class="service-block-three">
                                 <div class="inner-box">
-                                    <figure class="icon-box"><img src="images/icons/s-icon-4.png" alt=""></figure>
+                                    <figure class="icon-box"><img src="images/icons/nacimiento.jpg" alt=""></figure>
                                     <h3><a href="service-single.html">2010</a></h3>
                                     <div class="text" style="font-size: 14px;"> Nace Omegasoft como una empresa de servicion IT.</div>
                                 </div>
@@ -283,7 +285,7 @@
                         <div class="sec-title centered" style="text-align: initial;"> 
                             <div class="service-block-three">
                                 <div class="inner-box">
-                                    <figure class="icon-box"><img src="images/icons/s-icon-5.png" alt=""></figure>
+                                    <figure class="icon-box"><img src="images/icons/alianza.jpg" alt=""></figure>
                                     <h3><a href="service-single.html">2010</a></h3>
                                     <div class="text" style="font-size: 14px;">Formalizamos alianza con un fabricante de soluciones para la gestión de IT.</div>
                                 </div>
@@ -297,7 +299,7 @@
                         <div class="sec-title centered" style="text-align: initial;">
                             <div class="service-block-three">
                                 <div class="inner-box">
-                                    <figure class="icon-box"><img src="images/icons/s-icon-6.png" alt=""></figure>
+                                    <figure class="icon-box"><img src="images/icons/desarrollamos.jpg" alt=""></figure>
                                     <h3><a href="service-single.html">2015</a></h3>
                                     <div class="text" style="font-size: 14px;">Desarrollamos nuestra primera solución  para la gestión  de procesos ITIL. basadas  en la mejores plácticas</div>
                                 </div>
@@ -311,7 +313,7 @@
                         <div class="sec-title centered" style="text-align: initial;">
                             <div class="service-block-three">
                                 <div class="inner-box">
-                                    <figure class="icon-box"><img src="images/icons/s-icon-7.png" alt=""></figure>
+                                    <figure class="icon-box"><img src="images/icons/lanzamiento-1.jpg" alt=""></figure>
                                     <h3><a href="service-single.html">2016</a></h3>
                                     <div class="text" style="font-size: 14px;">Lanzamiento versión comercial   Omega ITSM.</div>
                                 </div>
@@ -325,7 +327,7 @@
                         <div class="sec-title centered" style="text-align: initial;">
                             <div class="service-block-three">
                                 <div class="inner-box">
-                                    <figure class="icon-box"><img src="images/icons/s-icon-8.png" alt=""></figure>
+                                    <figure class="icon-box"><img src="images/icons/lanzamiento-2.jpg" alt=""></figure>
                                     <h3><a href="service-single.html">2017</a></h3>
                                     <div class="text" style="font-size: 14px;">Lanzamiento de versión comercial Omega ITSM, intergrando Omega CMDB.</div>
                                 </div>
@@ -406,40 +408,26 @@
                         <div class="inner">
                             <!--Heading-->
                             <div class="sec-title-two">
-                                <h1>Our Success Facts</h1>
+                                <h1>Nuestros Éxitos</h1>
                             </div>
-                            <div class="text">This product is meant for educational purposes only. Any resemblance to real persons, living or dead is coincidental. Void where prohibited.</div>
-                            
-                            <div class="fun-facts">
+                              <div class="fun-facts">
                                 <div class="row clearfix">
                                     <div class="count-column col-md-4 col-sm-4 col-xs-12">
                                         <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="20000">20000</span>+</div>
-                                            <h4 class="counter-title">Project Complete</h4>
+                                            <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="20000">0</span>+</div>
+                                            <h4 class="counter-title">Proyectos Completados</h4>
                                         </div>
                                     </div>
                                     <div class="count-column col-md-4 col-sm-4 col-xs-12">
                                         <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="5000">5000</span>+</div>
-                                            <h4 class="counter-title">Happy Clients</h4>
+                                            <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="50000">0</span>+</div>
+                                            <h4 class="counter-title">Clientes Felices</h4>
                                         </div>
                                     </div>
                                     <div class="count-column col-md-4 col-sm-4 col-xs-12">
                                         <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="2000" data-stop="25">25</span></div>
-                                            <h4 class="counter-title">Years Experience</h4>
-                                        </div>
-                                    </div>
-                                    <div class="count-column col-md-4 col-sm-4 col-xs-12">
-                                        <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="90">90</span>%</div>
-                                            <h4 class="counter-title">Success Rate</h4>
-                                        </div>
-                                    </div>
-                                    <div class="count-column col-md-4 col-sm-4 col-xs-12">
-                                        <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="35">35</span></div>
-                                            <h4 class="counter-title">Expert Advisors</h4>
+                                            <div class="count-outer"><span class="count-text" data-speed="2000" data-stop="8">8</span></div>
+                                            <h4 class="counter-title">años experiencia</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -484,7 +472,7 @@
             <div class="auto-container">
                 <!--Heading-->
                 <div class="sec-title-two centered">
-                    <h1>Nuestro Equipo</h1>
+                    <h1 style="margin-top: -100px">Nuestro Equipo</h1>
                 </div>
                 
                 <div class="carousel-box">
@@ -685,13 +673,13 @@
 <script src="js/script.js"></script>
 
 
+
 <script src="js/color-settings.js"></script>
 
 
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyBKS14AnP3HCIVlUpPKtGp7CbYuMtcXE2o"></script>
 <script src="js/map-script.js"></script>
 
-<script src="js/color-settings.js"></script>
 </body>
 
 </html>
