--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Mirrored from themebunch.com/html/fico/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 May 2018 20:35:00 GMT -->
 <head>
 <meta charset="utf-8">
-<title>Omegasoft</title>
-
-
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<title>Fico - Finance and Consultancy HTML Template | Home 02</title>
+<!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="plugins/revolution/css/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
 <link href="plugins/revolution/css/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
 <link href="plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
-
-
-<link href="css/color-switcher-design.css" rel="stylesheet">
-
-
-<link id="theme-color-file" href="css/color-themes/default-theme.css" rel="stylesheet">
-
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -41,23 +26,12 @@
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
-
-
-<link href="css/color-switcher-design.css" rel="stylesheet">
-
-
-<link id="theme-color-file" href="css/color-themes/default-theme.css" rel="stylesheet">
-
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
-
-
-
+<!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-
-</head>
+<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
 
 <body>
 
@@ -414,13 +388,13 @@
                                 <div class="row clearfix">
                                     <div class="count-column col-md-4 col-sm-4 col-xs-12">
                                         <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="20000">0</span>+</div>
+                                            <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="30">30</span>+</div>
                                             <h4 class="counter-title">Proyectos Completados</h4>
                                         </div>
                                     </div>
                                     <div class="count-column col-md-4 col-sm-4 col-xs-12">
                                         <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="50000">0</span>+</div>
+                                            <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="25">25</span>+</div>
                                             <h4 class="counter-title">Clientes Felices</h4>
                                         </div>
                                     </div>
@@ -626,7 +600,7 @@
                     </div>
                 </div>
             </div>   
-        </footer>
+    </footer>
 </div>
 
 
