--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -384,28 +384,28 @@
                             <div class="sec-title-two">
                                 <h1>Nuestros Éxitos</h1>
                             </div>
-                              <div class="fun-facts">
-                                <div class="row clearfix">
-                                    <div class="count-column col-md-4 col-sm-4 col-xs-12">
-                                        <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="30">30</span>+</div>
-                                            <h4 class="counter-title">Proyectos Completados</h4>
+                            <div class="fun-facts">
+                                    <div class="row clearfix">
+                                        <div class="count-column col-md-4 col-sm-4 col-xs-12">
+                                            <div class="inner-box count-box">
+                                                <div class="count-outer"><span class="count-text" data-speed="5000" data-stop="30">0</span>+</div>
+                                                <h4 class="counter-title">Proyectos completados</h4>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="count-column col-md-4 col-sm-4 col-xs-12">
-                                        <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="25">25</span>+</div>
-                                            <h4 class="counter-title">Clientes Felices</h4>
+                                        <div class="count-column col-md-4 col-sm-4 col-xs-12">
+                                            <div class="inner-box count-box">
+                                                <div class="count-outer"><span class="count-text" data-speed="3000" data-stop="25">0</span>+</div>
+                                                <h4 class="counter-title">Clientes Felices</h4>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="count-column col-md-4 col-sm-4 col-xs-12">
-                                        <div class="inner-box count-box counted">
-                                            <div class="count-outer"><span class="count-text" data-speed="2000" data-stop="8">8</span></div>
-                                            <h4 class="counter-title">años experiencia</h4>
+                                        <div class="count-column col-md-4 col-sm-4 col-xs-12">
+                                            <div class="inner-box count-box">
+                                                <div class="count-outer"><span class="count-text" data-speed="2000" data-stop="8">0</span></div>
+                                                <h4 class="counter-title">años experiencia</h4>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                     
