--- a/webcast.html
+++ b/webcast.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from themebunch.com/html/fico/partners.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 May 2018 20:36:10 GMT -->
 <head>
 <meta charset="utf-8">
-<title>Fico - Finance and Consultancy HTML Template | Our Partners</title>
+<title>Omegasoft</title> 
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
