--- a/html-previo/partners.html
+++ b/html-previo/partners.html
@@ -508,8 +508,8 @@
                                             <span class="link-box"><a href="#">www.datco.com<span class="fa fa-long-arrow-right"></span></a></span> 
                                     </div>
                                     <div class="text" style="font-size: 15px; margin-top: 10px;">
-                                            <img style="height: 32px;width:32px;margin-right:5px;margin-top: 10px;" src="images/icons/partner-oro.jpg" alt="">
-                                            <span>Partner Servicios Oro</span> 
+                                            <img style="height: 25px;width:25px;margin-right:5px;margin-top: 10px;" src="images/icons/partner-oro.jpg" alt="">
+                                            <span style="font-size: 12px">Partner Servicios Oro</span> 
                                     </div>
                             </div>
                     </div>
